Fixed delete session bug + previous sessions line spacing

--- a/improvisor/static/CSS/improvisor_styles.css
+++ b/improvisor/static/CSS/improvisor_styles.css
@@ -1018,6 +1018,10 @@ p.error {
     border: 1px solid #ccc;
 }
 
+.session p {
+    margin: 5px;
+}
+
 .assetThumbnail {
     max-width: 170px;
     max-height: 130px;;
